# faster-rcnn

./: README.md  pyproject.toml
docs/: dataset.md
scripts/: show_backbone.py
src/faster_rcnn/data/: dataset.py  transforms.py
src/faster_rcnn/models/: RPN.py  backbone.py
src/faster_rcnn/utils/: boxes.py  data.py  misc.py
tests/: test_dataset.py
