[project]
name = "faster-rcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "ipython>=9.9.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
